# toolbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  build_binary.py  changelogs.txt  mkdocs.yml  publish.py  pyproject.toml  requirements.txt  setup_engines.py  variable_workflow.yaml
.github/workflows/: pypi-publish.yml  release.yml  test.yml
docs/: getting-started.md  index.md
examples/: sample_workflow.yaml  universal_demo.yaml
src/toolbox/: __main__.py  cli.py
src/toolbox/core/: ai.py  ai_intelligence.py  config.py  dashboard.py  engine.py  io.py  logging.py  plugin.py  utils.py  workflow.py
src/toolbox/plugins/ai/: __init__.py
src/toolbox/plugins/ambient/: __init__.py
src/toolbox/plugins/archive/: __init__.py
src/toolbox/plugins/audio/: __init__.py
src/toolbox/plugins/data/: __init__.py
src/toolbox/plugins/desktop/: __init__.py
src/toolbox/plugins/doc/: __init__.py
src/toolbox/plugins/file/: __init__.py
src/toolbox/plugins/image/: __init__.py
src/toolbox/plugins/network/: __init__.py
src/toolbox/plugins/pdf/: __init__.py
src/toolbox/plugins/security/: __init__.py
src/toolbox/plugins/util/: __init__.py
src/toolbox/plugins/video/: __init__.py
tests/: test_cli.py  test_config.py  test_engine.py  test_file_plugin.py  test_image_plugin.py  test_io.py  test_video_plugin.py  test_workflow.py
tools/: generate_github_wiki.py
wiki/: Command-Index.md  Command-ai-agent.md  Command-ai-bci.md  Command-ai-chat.md  Command-ai-download.md  Command-ai-image-gen.md  Command-ai-index.md  Command-ai-singularity.md  Command-ai-vision.md  Command-ai.md  Command-ambient-fleet-health.md  Command-ambient-predict.md  Command-ambient-shadow.md  Command-ambient-voice.md  Command-ambient.md  Command-archive-compress.md  Command-archive-extract.md  Command-archive.md  Command-audio-convert.md  Command-audio-merge.md  Command-audio-normalize.md  Command-audio-stt.md  Command-audio-trim.md  Command-audio.md  Command-check.md  Command-config-list.md  Command-config-set.md  Command-config.md  Command-data-convert.md  Command-data-inspect.md  Command-data-sql-export.md  Command-data.md  Command-desktop-ar-overlay.md  Command-desktop-daemon.md  Command-desktop-dashboard.md  Command-desktop-install-context-menu.md  Command-desktop-notify.md  Command-desktop-register-file-type.md  Command-desktop-uninstall-context-menu.md  Command-desktop.md  (+105 more)
