[project]
name = "toolbox-universal"
version = "0.2.0"
description = "A universal high-performance CLI command tool for offline file processing, AI tasks, and automation."
authors = [{ name = "ToolBox Architect" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["cli", "file-processing", "automation", "workflow", "ai", "security"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.3",
    "pyyaml>=6.0.1",
    "pillow>=10.1.0",
    "pypdf>=3.17.1",
    "qrcode>=7.4.2",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "cryptography>=41.0.0",
    "rembg>=2.0.53",
    "onnxruntime>=1.16.0",
    "watchdog>=3.0.0",
    "schedule>=1.2.1",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/CrystalDustt-V2/toolbox"
Repository = "https://github.com/CrystalDustt-V2/toolbox"
Issues = "https://github.com/CrystalDustt-V2/toolbox/issues"
Changelog = "https://github.com/CrystalDustt-V2/toolbox/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pyinstaller>=6.3.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
]

[project.scripts]
toolbox = "toolbox.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["toolbox*"]
